@@ -1,5 +1,6 @@
 == 2.7.12 ==
 Release date: 
+* Enhancement: Buttons - Updated Buttons Spacing option to add row spacing when button stack
 * Fixed: Instagram Feed - Carousel was not working when Upgrade Swiper Library experiment is set to active
 
 == 2.7.11 ==
